--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row {
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}
+
+.left {
+  width: 55%;
+  background: url("https://cdn.pixabay.com/photo/2015/06/22/08/38/siblings-817369__340.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.right {
+  background-color: #eff2f7;
+  width: 45%;
+}
+
+.form {
+  display: flex;
+  width: 100%;
+  height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+form {
+  width: 420px;
+  height: auto;
+  padding: 30px 35px;
+  background-color: white;
+  border-radius: 2px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.myform {
+  animation: abc 0.5s linear;
+}
+@keyframes abc {
+  0% {
+    transform: scale(0);
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: scale(1);
+    opacity: 1;
   }
+}
+.group {
+  margin: 8px 0px;
+}
+.control {
+  width: 100%;
+  padding: 13px 12px;
+  border: none;
+  border-left: 4px solid orangered;
+  background-color: #edf2f7;
+}
+label {
+  display: block;
+  margin-left: 2px;
+  columns: silver;
+}
+.btn {
+  border: none;
+  background-color: orangered;
+  width: 100%;
+  padding: 13px 5px;
+  text-align: center;
+  color: #edf2f7;
+  cursor: pointer;
+  outline: none;
+  font-size: 17px;
+}
+.link {
+  display: block;
+  margin-top: 20px;
+  color: orangered;
+  font-weight: bold;
+  cursor: pointer;
 }
